Made necessary changes to initiate the Python app using the URL: py.associateattorney.ai/gpt/

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,14 @@ services:
     environment:
       - NODE_ENV=production
     networks:
-      - finance
+      - zmeet
     volumes:
-      - /gt/gt-prog-repos/platform/py.associateattorney.ai:/gt/gt-prog-repos/platform/py.associateattorney.ai
-      - /gt/gt-prog-repos/platform/py.associateattorney.ai/etc-supervisor-conf.d-services.conf:/etc/supervisor/conf.d/services.conf
+      - /gt/ai-associate-attorney/py.associateattorney.ai:/gt/ai-associate-attorney/py.associateattorney.ai
+      - /gt/ai-associate-attorney/py.associateattorney.ai/etc-supervisor-conf.d-services.conf:/etc/supervisor/conf.d/services.conf
     # ports: docker-compose is only used for prod. And in prod port forwarding is not needed since nginx is the proxy and its on the same network as this container.
     #  - "3000:3000"
 
 networks:
-  finance:
+  zmeet:
     external:
-      name: finance_default
+      name: zmeet_default
